--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body, html {
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+}
+
+form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 5px;
+  border: 2px solid #2196F3;
+  max-width: 400px;
+  min-width: 100px;
+  padding: 20px;
+  flex-flow: column wrap;
+  margin: 100px 0 40px 10px;
+  overflow: hidden;
+}
+
+hr {
+  margin: 0 10px 0 10px;
+  border: 1px solid #2196F3;
+}
+
+.title {
+  font-weight: bold;
+  letter-spacing: 5px;
+  margin: 20px 0 0 15px;
+  text-transform: uppercase;
 }
